maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: ')' expected but 'if' found.
  if(!aMurOuest(x,y) && !(getIndication(x-1,y)<=marquage)){
  ^